--- a/ABC_Restaurant/src/main/resources/application-dev.properties
+++ b/ABC_Restaurant/src/main/resources/application-dev.properties
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.initialization-mode=never
 spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
+server.servlet.context-path=/api
+logging.level.org.springframework.security=DEBUG
