--- a/ABC_Restaurant/src/main/resources/application-dev.properties
+++ b/ABC_Restaurant/src/main/resources/application-dev.properties
@@ -11,3 +11,7 @@ spring.datasource.initialization-mode=never
 spring.datasource.tomcat.connection-properties=useUnicode=true;characterEncoding=utf-8;
 server.servlet.context-path=/api
 logging.level.org.springframework.security=DEBUG
+
+
+fileUploadUrl=C:/opt/tomcat/webapps/resources/attachment
+fileDownloadUrl=http://localhost:8080/resources/attachment
