--- a/ABC_Restaurant/src/main/resources/application-dev.properties
+++ b/ABC_Restaurant/src/main/resources/application-dev.properties
@@ -13,5 +13,7 @@ server.servlet.context-path=/api
 logging.level.org.springframework.security=DEBUG
 
 
-fileUploadUrl=C:/opt/tomcat/webapps/resources/attachment
+fileUploadUrl=C:/opt/tomcat/webapps/resources/attachment/
 fileDownloadUrl=http://localhost:8080/resources/attachment
+#spring.resources.static-locations=classpath:/static/,classpath:/public/,file:/path/to/your/resources/
+spring.web.resources.static-locations=classpath:/resources/
